--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -2391,7 +2391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2399,25 +2399,30 @@
      "output_type": "stream",
      "text": [
       "order:  1\n",
-      "0.10822627108134786 -0.3346139568787925\n",
-      "[0.01283752]\n",
+      "RMSE Train: 172.1301778615243\n",
+      "RMSE Test: 199.3896467778171\n",
+      "Coefficients: [0.01283752]\n",
       "order:  2\n",
-      "0.10865026634396513 -0.39872165446964214\n",
-      "[9.72532173e-03 1.92324992e-07]\n",
+      "RMSE Train: 172.08925321070743\n",
+      "RMSE Test: 204.12228540109373\n",
+      "Coefficients: [9.72532173e-03 1.92324992e-07]\n",
       "order:  3\n",
-      "0.11303777410176286 -0.7237691606561232\n",
-      "[ 3.34188996e-02 -3.46804544e-06  1.50800084e-10]\n",
+      "RMSE Train: 171.66519162223997\n",
+      "RMSE Test: 226.60230657391344\n",
+      "Coefficients: [ 3.34188996e-02 -3.46804544e-06  1.50800084e-10]\n",
       "order:  4\n",
-      "0.13669485946686366 -0.04204586817594724\n",
-      "[ 1.37405394e-01 -3.23832336e-05  2.93032382e-09 -8.58831913e-14]\n",
+      "RMSE Train: 169.36038952654042\n",
+      "RMSE Test: 176.1846998237374\n",
+      "Coefficients: [ 1.37405394e-01 -3.23832336e-05  2.93032382e-09 -8.58831913e-14]\n",
       "order:  5\n",
-      "0.13669485946686366 -0.04204586817594724\n",
-      "[ 1.37405394e-01 -3.23832336e-05  2.93032382e-09 -8.58831913e-14]\n"
+      "RMSE Train: 169.36038952654042\n",
+      "RMSE Test: 176.1846998237374\n",
+      "Coefficients: [ 1.37405394e-01 -3.23832336e-05  2.93032382e-09 -8.58831913e-14]\n"
      ]
     }
    ],
    "source": [
-    "for order in range(1,6):\n",
+    "for order in range(1, 6):\n",
     "    dp = DeterministicProcess(index=y_train_t.index, constant=False, order=order, drop=True)\n",
     "    X_train_t = dp.in_sample()\n",
     "    X_test_t = dp.out_of_sample(steps=len(y_test_t))\n",
@@ -2425,11 +2430,12 @@
     "    model.fit(X_train_t, y_train_t)\n",
     "    y_pred = model.predict(X_train_t)\n",
     "    y_fore = model.predict(X_test_t)\n",
-    "    r2_train = r2_score(y_train_t, y_pred)\n",
-    "    r2_test = r2_score(y_test_t, y_fore)\n",
+    "    rmse_train = np.sqrt(mean_squared_error(y_train_t, y_pred))\n",
+    "    rmse_test = np.sqrt(mean_squared_error(y_test_t, y_fore))\n",
     "    print('order: ', order)\n",
-    "    print(r2_train, r2_test)\n",
-    "    print(model.coef_)"
+    "    print('RMSE Train:', rmse_train)\n",
+    "    print('RMSE Test:', rmse_test)\n",
+    "    print('Coefficients:', model.coef_)"
    ]
   },
   {
