--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -3226,6 +3226,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- **Lineaire regressie**\n",
+    "is een methode die wordt gebruikt om de relatie tussen een afhankelijke variabele $y$ en een of meer onafhankelijke variabelen $x$ te modelleren.\n",
+    "  - Voor een meervoudige lineaire regressie met $p$ features is het model als volgt:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}_i = b + w_1 x_{i1} + w_2 x_{i2} + \\dots + w_p x_{ip}\n",
+    "$$\n",
+    "\n",
+    "Of in vectorvorm:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}_i = b + \\mathbf{w}^\\top \\mathbf{x}_i\n",
+    "$$\n",
+    "\n",
+    "  Waar:\n",
+    "\n",
+    "  - $\\hat{y}_i$ de voorspelde waarde voor observatie $i$ is,\n",
+    "  - $b$ de intercept (constante term) is,\n",
+    "  - $\\mathbf{w} = [w_1, w_2, \\dots, w_p]^\\top$ de vector van coefficienten is,\n",
+    "  - $\\mathbf{x}_i = [x_{i1}, x_{i2}, \\dots, x_{ip}]^\\top$ de featurevector voor observatie $i$ is.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "- **Loss Function**\n",
     "  - Bij lineaire regressie gebruiken we een loss function om te meten hoe goed ons model presteert. De meest gebruikte loss function is de MSE. MSE berekent het gemiddelde van de kwadraten van de verschillen tussen de predicted waarden en de actual waarden. De formule is:\n",
     "  \n",
