--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -2245,7 +2245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature 1 cyclische representatie"
+    "### Cyclische representatie"
    ]
   },
   {
@@ -5400,7 +5400,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Modellen die het vaak goed doen zijn d.m.v. hybride aanpak\n",
+    "\n",
+    "Dit komt doordat verschillende modellen verschillende sterkte punten hebben (linaire patronen herkenen, niet lineaire patronen herkennen etc.)\n",
+    "\n",
+    "Door dit samen te voegen kan je modellen verbeteren. De sterke punten combineren om zo de fouten van het eerste model te corrigeren met het nieuwe model."
+   ]
   },
   {
    "cell_type": "markdown",
