uitleg model keuze

--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -3147,14 +3147,62 @@
    "source": [
     "Keuze features:\n",
     "\n",
-    "- Standaard timeseries kolommen (hour, day, week, weekend, season, weekend)\n",
-    "- Trend (enigzins lineaire trend, zoals te zien in de decompose grafiek. Het heeft in ieder geval geen kwadratisch verband)\n",
-    "- Sinus + Cosinus (aan de hand van de fourier analyse)\n",
-    "- Lags eventueel\n",
+    "- Standaard timeseries kolommen (hour, day, week, weekend, season, weekend)<br>\n",
+    "<br>\n",
+    "Aan het begin zijn er een aantal standaard timeseries kolommen toegevoegd als features (zie hierboven). Deze zijn toegevoegd om ten eerst een beter inzicht in de data te krijgen, maar ook om uiteindelijk weer andere features mee te maken (zoals de sin / cos van deze kolommen)\n",
+    "\n",
+    "- Trend <br>\n",
+    "<br>\n",
+    "Door te kijken naar de originele grafiek zijn we erachter gekomen dat er een stijgende trend over de jaren in de data zit. Ook is er uit de DeterministicProcess functie gekomen dat order 1 het beste paste bij onze data. Door deze twee redenen is er besloten om een trend van order 1 als feature toe te voegen.\n",
+    "\n",
+    "- Sinus + Cosinus <br>\n",
+    "<br>\n",
+    "In de Fourier Analyse is naarboven gekomen dat er drie significante frequenties waren. Dit waren de jaarlijkse, dagelijkse en 12-uurlijke periode. Doordat dit de drie dominante frequenties waren, zijn er voor deze drie frequenties sinus / cosinus representaties toegevoged aan de dataset. \n",
+    "\n",
+    "- Lags eventueel<br>\n",
+    "<br>\n",
+    "Aan het algemene dataframe worden er geen lags van kolommen toegevoegd. Enkel in het SARIMA model wordt er gebruik gemaakt van lags, maar deze worden in de parameter aangegeven.\n",
     "\n",
     "Keuze modellen:\n",
     "\n",
-    "- "
+    "- Lineair Regression<br>\n",
+    "<br>\n",
+    "Lineaire regressie is een eenvoudig model om te kijken of er een lineaire relatie is tussen de tijd en target. Ook kan het goed met trends en seasonal data omgaan. Daarnaast is het ook een goed model om als basis mee te starten. \n",
+    "\n",
+    "\n",
+    "- Decision Tree Regressor<br>\n",
+    "<br>\n",
+    "Deze is gekozen zodat we ook een model hebben dat om kan gaan met niet lineaire relaties. We hebben een vrij ingewikkelde dataset met verschillende patronen, waardoor dit een goed model kan zijn.\n",
+    "\n",
+    "\n",
+    "- Random Forest Regressor<br>\n",
+    "<br>\n",
+    "Dit is ensemble dat gebruik maakt van verschillende decision trees, dus het is hier eigenlijk een verbetere versie van. Ook heeft het een relatief korte trainingstijd in tegenstelling tot ensembles die sequentieel worden getraind, waardoor het geschikter is voor ons.\n",
+    "\n",
+    "- KNeighborsRegressor<br>\n",
+    "<br>\n",
+    "Het is een flexibel model dat herhalende periodieke patronen in de data goed kan herkennen. Ook maakt het geen aannames over lineaire of niet-lineaire relaties, wat goed zou kunnen zijn voor om voorspellingen mee te maken voor timeseries modellen.\n",
+    "\n",
+    "- XGBRegressor<br>\n",
+    "<br>\n",
+    "Dit model kan net wat beter werken dan andere ensemble modellen. Het wordt namelijk sequentieel getrain, waardoor dit wel langer de tijd kost, maar zo leert het van de fouten van eerdere trees. Over het algemeen is dit een heel krachtig model, dus is er besloten om ook hiervan gebruik te maken.\n",
+    "\n",
+    "\n",
+    "- SARIMAX <br>\n",
+    "<br>\n",
+    "Dit model is gekozen, aangezien dit een randvoorwaarde van het project is. Ook is het natuurlijk een timeseries model, wat goed zou moeten werken op een timeseries dataset. SARIMA heeft ook meerdere ingebouwde parameters dat de mogelijkheid biedt om met onder andere lags, seasonal componenen etc. te gaan voorspellen. Ook neemt het eerdere fouten mee, om zichzelf hiermee te verbeteren.\n",
+    "\n",
+    "- Prophet <br>\n",
+    "<br>\n",
+    "Nog doen\n",
+    "\n",
+    "- Hybride model (welke twee)<br>\n",
+    "<br>\n",
+    "Nog doen\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Gebruikte bronnen staan later in het notebook per model aangegeven**"
    ]
   },
   {
@@ -4722,7 +4770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4732,17 +4780,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_dict = {'sx': SARIMAX(endog=train_ar['cnt'], order=(2, 1, 1), seasonal_order=(1, 1, 1, 24)),\n",
+    "models_dict = {'sx': SARIMAX(endog=train_ar['cnt'].values.ravel(), order=(2, 1, 1), seasonal_order=(1, 1, 1, 24)),\n",
     "               }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TimeSeriesModels:\n",
+    "    def __init__(self, data, target, shuffle=True, test_size=0.2, random_state=42):\n",
+    "        self.data = data            \n",
+    "        self.X = self.data.drop(target, axis=1)\n",
+    "        self.y = self.data[[target]]        \n",
+    "        self.X_train_s, self.X_test_s, self.y_train_s, self.y_test_s = train_test_split(self.X, self.y,\n",
+    "                                                                                test_size=test_size, shuffle=shuffle, \n",
+    "                                                                                random_state=random_state)\n",
+    "\n",
+    "    def predict(self, models=models_dict):\n",
+    "        self.models_dict = models\n",
+    "        for name, model in self.models_dict.items():\n",
+    "            if isinstance(model, SARIMAX):\n",
+    "                fitted_model = model.fit(disp=False)\n",
+    "                self.y_train_pred = fitted_model.predict(start=self.y_train_s.index[0], end=self.y_train_s.index[-1])\n",
+    "                self.y_test_pred = fitted_model.predict(start=self.y_test_s.index[0], end=self.y_test_s.index[-1])\n",
+    "            \n",
+    "            train_rmse = np.sqrt(mean_squared_error(self.y_train_s, self.y_train_pred))\n",
+    "            test_rmse = np.sqrt(mean_squared_error(self.y_test_s, self.y_test_pred))\n",
+    "            print(f'{name} train RMSE:', train_rmse)\n",
+    "            print(f'{name} test RMSE:', test_rmse)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4816,42 +4894,10 @@
     }
    ],
    "source": [
-    "class TimeSeriesModels:\n",
-    "    def __init__(self, data, target, shuffle=True, test_size=0.2, random_state=42):\n",
-    "        self.data = data            \n",
-    "        self.X = self.data.drop(target, axis=1)\n",
-    "        self.y = self.data[[target]]        \n",
-    "        self.X_train_s, self.X_test_s, self.y_train_s, self.y_test_s = train_test_split(self.X, self.y,\n",
-    "                                                                                test_size=test_size, shuffle=shuffle, \n",
-    "                                                                                random_state=random_state)\n",
-    "\n",
-    "    def predict(self, models=models_dict):\n",
-    "        self.models_dict = models\n",
-    "        for name, model in self.models_dict.items():\n",
-    "            if isinstance(model, SARIMAX):\n",
-    "                fitted_model = model.fit(disp=False)\n",
-    "                self.y_train_pred = fitted_model.predict(start=self.y_train_s.index[0], end=self.y_train_s.index[-1])\n",
-    "                self.y_test_pred = fitted_model.predict(start=self.y_test_s.index[0], end=self.y_test_s.index[-1])\n",
-    "            \n",
-    "            train_rmse = np.sqrt(mean_squared_error(self.y_train_s, self.y_train_pred))\n",
-    "            test_rmse = np.sqrt(mean_squared_error(self.y_test_s, self.y_test_pred))\n",
-    "            print(f'{name} train RMSE:', train_rmse)\n",
-    "            print(f'{name} test RMSE:', test_rmse)\n",
-    "        \n",
-    "\n",
     "data_s = TimeSeriesModels(data=train_ar, target='cnt', shuffle=False, test_size=19*24)\n",
     "data_s.predict()\n",
     "\n",
     "display(data_s.X_train_s.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.tune_params(n_splits = int(round(len(train)/len(test), 0)), models_dict_tune=models_dict)"
    ]
   },
   {
@@ -5333,13 +5379,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5348,9 +5387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[64], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m y_train_res \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39my_train\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mravel() \u001b[38;5;241m-\u001b[39m train_predict1\n\u001b[0;32m      9\u001b[0m y_test_res \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39my_test\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mravel() \u001b[38;5;241m-\u001b[39m test_predict1\n\u001b[1;32m---> 11\u001b[0m model2\u001b[38;5;241m.\u001b[39mfit(data_s\u001b[38;5;241m.\u001b[39mX_train_s, y_train_res)\n\u001b[0;32m     12\u001b[0m train_predictions_total \u001b[38;5;241m=\u001b[39m model2\u001b[38;5;241m.\u001b[39mpredict(data_s\u001b[38;5;241m.\u001b[39mX_train_s) \u001b[38;5;241m+\u001b[39m train_predict1\n\u001b[0;32m     13\u001b[0m test_predictions_total \u001b[38;5;241m=\u001b[39m model2\u001b[38;5;241m.\u001b[39mpredict(data_s\u001b[38;5;241m.\u001b[39mX_test_s) \u001b[38;5;241m+\u001b[39m test_predict1\n",
+      "File \u001b[1;32mc:\\Users\\jassa\\anaconda3\\Lib\\site-packages\\statsmodels\\tsa\\statespace\\mlemodel.py:673\u001b[0m, in \u001b[0;36mMLEModel.fit\u001b[1;34m(self, start_params, transformed, includes_fixed, cov_type, cov_kwds, method, maxiter, full_output, disp, callback, return_params, optim_score, optim_complex_step, optim_hessian, flags, low_memory, **kwargs)\u001b[0m\n\u001b[0;32m    669\u001b[0m start_params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandle_params(start_params, transformed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    670\u001b[0m                                   includes_fixed\u001b[38;5;241m=\u001b[39mincludes_fixed)\n\u001b[0;32m    672\u001b[0m \u001b[38;5;66;03m# Unconstrain the starting parameters\u001b[39;00m\n\u001b[1;32m--> 673\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m transformed:\n\u001b[0;32m    674\u001b[0m     start_params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muntransform_params(start_params)\n\u001b[0;32m    676\u001b[0m \u001b[38;5;66;03m# Remove any fixed parameters\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
    "source": [
     "model1 = RandomForestRegressor()\n",
     "model2 = SARIMAX(endog=train['cnt'], order=(2, 1, 1), seasonal_order=(1, 1, 1, 24))\n",
@@ -5362,9 +5414,9 @@
     "y_train_res = data.y_train.values.ravel() - train_predict1\n",
     "y_test_res = data.y_test.values.ravel() - test_predict1\n",
     "\n",
-    "model2.fit(data.X_train2, y_train_res)\n",
-    "train_predictions_total = model2.predict(data.X_train2) + train_predict1\n",
-    "test_predictions_total = model2.predict(data.X_test2) + test_predict1\n",
+    "model2.fit(data_s.X_train_s, y_train_res)\n",
+    "train_predictions_total = model2.predict(data_s.X_train_s) + train_predict1\n",
+    "test_predictions_total = model2.predict(data_s.X_test_s) + test_predict1\n",
     "\n",
     "print('train r2', r2_score(data.y_train.values.ravel(), train_predictions_total))\n",
     "print('test r2', r2_score(data.y_test.values.ravel(), test_predictions_total))"
