--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,18 @@
    ],
    "source": [
     "def tsplot(y, lags=None, figsize=(12, 7), syle='bmh'):\n",
-    "    \n",
+    "        \"\"\"\n",
+    "        Plot time series data along with its ACF and PACF.\n",
+    "        Parameters:\n",
+    "            y : array-like or pd.Series\n",
+    "            The time series data to plot.\n",
+    "            lags : int, optional\n",
+    "            Number of lags to include in the ACF and PACF plots. If None, will automatically determine the number of lags.\n",
+    "            figsize : tuple, optional\n",
+    "            The size of the figure for the plots. Default is (12, 7).\n",
+    "            style : str, optional\n",
+    "            The style to use for the plots. Default is 'bmh'.\n",
+    "        \"\"\"    \n",
     "    if not isinstance(y, pd.Series):\n",
     "        y = pd.Series(y)\n",
     "        \n",
@@ -2257,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2636,6 +2647,16 @@
    "source": [
     "# Cyclische kenmerken toevoegen\n",
     "def add_cyclic_features(df, time_col, periods, prefix=\"hour\"):\n",
+    "    \"\"\"\n",
+    "    Adds cyclic features to a DataFrame based on a specified time column and periods.\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame containing the time column.\n",
+    "        time_col (str): The name of the column in the DataFrame that contains the time values.\n",
+    "        periods (list): A list of periods to create cyclic features for (e.g., [24, 12] for daily and half-daily cycles).\n",
+    "        prefix (str, optional): A prefix for the new cyclic feature columns. Default is \"hour\".\n",
+    "        Returns:\n",
+    "            pd.DataFrame: The DataFrame with added cyclic features.\n",
+    "    \"\"\"\n",
     "    \n",
     "    for period in periods:\n",
     "        sin_col_name = f\"sin_{prefix}_{period}\"\n",
@@ -3252,11 +3273,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RegressionModels:\n",
+    "    \"\"\"\n",
+    "    A class used to represent various regression models and their operations.\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    data : pandas.DataFrame\n",
+    "        The input data for the regression models.\n",
+    "    X : pandas.DataFrame\n",
+    "        The feature matrix after preprocessing.\n",
+    "    y : pandas.DataFrame\n",
+    "        The target variable.\n",
+    "    X_train : pandas.DataFrame\n",
+    "        The training set features.\n",
+    "    X_test : pandas.DataFrame\n",
+    "        The test set features.\n",
+    "    y_train : pandas.DataFrame\n",
+    "        The training set target.\n",
+    "    y_test : pandas.DataFrame\n",
+    "        The test set target.\n",
+    "    models_dict_tune : dict\n",
+    "        Dictionary containing models and their parameter grids for tuning.\n",
+    "    results : dict\n",
+    "        Dictionary to store the results of the parameter tuning.\n",
+    "    best_model : str\n",
+    "        The name of the best model after tuning.\n",
+    "    best_params : dict\n",
+    "        The best parameters for the best model.\n",
+    "    best_score : float\n",
+    "        The best score achieved by the best model.\n",
+    "    fi : dict\n",
+    "        Dictionary to store feature importances for models that have this attribute.\n",
+    "    models_dict : dict\n",
+    "        Dictionary containing models to be used for prediction.\n",
+    "    Methods\n",
+    "    -------\n",
+    "    __init__(data, target, dummie_cols=False, shuffle=True, test_size=0.2, random_state=42)\n",
+    "        Initializes the RegressionModels class with data, target, and other optional parameters.\n",
+    "    tune_params(n_splits, models_dict_tune)\n",
+    "        Tunes the parameters of the models using TimeSeriesSplit cross-validation.\n",
+    "    predict(models=models_dict)\n",
+    "        Fits the models on the training data and makes predictions on the test data.\n",
+    "    show_feature_importances()\n",
+    "        Displays the feature importances for models that have this attribute.\n",
+    "    \"\"\"\n",
     "    def __init__(self, data, target, dummie_cols=False, shuffle=True, test_size=0.2, random_state=42):\n",
     "        self.data = data\n",
     "        if dummie_cols:\n",
@@ -3888,7 +3952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5565,11 +5629,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Note</summary>\n",
+    "<span style=\"font-size: smaller;\">er is github copilot gebruikt bij het schrijven van sommige docstrings/comments</span>\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5583,7 +5662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
