--- a/Opdracht 2/ML_2.ipynb
+++ b/Opdracht 2/ML_2.ipynb
@@ -4134,6 +4134,10 @@
     "    - b_1 is de coëfficiënt\n",
     "    - t is de tijd\n",
     "\n",
+    "bron voor formule: Interpret all statistics and graphs for Trend Analysis - Minitab. (z.d.). (C) Minitab, LLC. All Rights Reserved. 2024. https://support.minitab.com/en-us/minitab/help-and-how-to/statistical-modeling/time-series/how-to/trend-analysis/interpret-the-results/all-statistics-and-graphs/\n",
+    "\n",
+    "bron voor uitleg: GeeksforGeeks. (2024, 20 maart). What is a trend in time series? GeeksforGeeks. https://www.geeksforgeeks.org/what-is-a-trend-in-time-series/\n",
+    "\n",
     "- Sinus + Cosinus <br>\n",
     "<br>\n",
     "In de Fourier Analyse is naarboven gekomen dat er drie significante frequenties waren. Dit waren de jaarlijkse, dagelijkse en 12-uurlijke periode. Doordat dit de drie dominante frequenties waren, zijn er voor deze drie frequenties sinus / cosinus representaties toegevoged aan de dataset. \n",
