Aantal dingen herkanst (fourier, eda,ensemble math)

--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -1086,15 +1086,15 @@
     "**Lineplots**\n",
     "- Hour:\n",
     "\n",
-    "    Er zijn een opvallend patroon in deze grafiek. Zo zijn er grote pieken in het aantal verhuurde producten rond 8 uur 's-ochtends en 6 uur 's-savonds.\n",
+    "    Er zijn een opvallend patroon in deze grafiek. Zo zijn er grote pieken in het aantal verhuurde producten rond 8 uur 's-ochtends en 6 uur 's-savonds. Daarnaast valt het ook op dat er laat in de avond (vanaf 20:00) en 's-nachts (voor 7:00) een stuk minder wordt verhuurd.\n",
     "\n",
     "- Day/DayName:\n",
     "\n",
-    "    Het valt op dat op de zondag het aantal verhuurde producten aanzienlijk lager is dan de rest van de dagen. \n",
+    "    Het valt op dat op de zondag het aantal verhuurde producten aanzienlijk lager is dan de rest van de dagen. Ook is er een stijgende lijn in het aantal verhuurde producten door de week heen. Dit loopt van zondag (laag aantal) tot vrijdag (hoog aantal).\n",
     "\n",
     "- Month/Week:\n",
     "\n",
-    "    In het begin en het einde van het jaar is het aantal verhuurde producten een stuk lager dan in het midden van het jaar (winterperiode dus lager, zomerperiode dus hoger)."
+    "    In het begin en het einde van het jaar is het aantal verhuurde producten een stuk lager dan in het midden van het jaar (winterperiode dus lager, zomerperiode dus hoger). Tijdens de zomerperiode zijn er niet opvallende pieken, het aantal verhuurde producten is wel op zijn hoogst, maar op een consistent aantal."
    ]
   },
   {
@@ -1275,7 +1275,7 @@
     "    Beide kolommen zijn relatief normaal verdeeld. Het valt wel op dat bij de 'atemp' kolom er een piek zit op de 0.6.\n",
     "\n",
     "- Hum: <br>\n",
-    "    Het is relatief normaal verdeeld, maar het valt wel op dat bij een hogere humidity het aantal verhuurde producten hoger ligt.\n",
+    "    Het is relatief normaal verdeeld. Het is wel opgevallen dat er bij een lage humidity (onder de 0.2) vrijwel geen producten zijn verhuurd.\n",
     "\n",
     "- Windspeed: <br>\n",
     "    Deze grafiek is left skewed. In de grafiek is te zien dat naarmate de windspeed hoger is, het aantal verhuurde producten afneemt.\n",
@@ -2293,7 +2293,13 @@
     "\n",
     "**Algemene uitleg werking fourier analyse**\n",
     "\n",
-    "Bij een Fourieranalyse wordt een wiskunde techniek toegepast die een time series omzet van het 'tijdsdomein' naar het 'frequentiedomein'. Dit houdt in dat een complexe time series wordt ontleedt in de samenstellende onderliggende periodieke signalen. Met behulp van deze analyse kunnen de verschillende periodieke signalen in één nieuwe timeseries grafiek worden geïdentificeerd. \n",
+    "Bij een Fourieranalyse wordt een wiskunde techniek toegepast die een time series omzet van het 'tijdsdomein' naar het 'frequentiedomein'. Dit houdt in dat een complexe time series wordt ontleedt in de samenstellende onderliggende periodieke signalen. \n",
+    "\n",
+    "Het voornaamste idee achter Fourier-analyse is dat elke complexe tijdsreeks kan worden gezien als een som van eenvoudige periodieke signalen, zoals sinus- en cosinusgolven, met verschillende frequenties, amplitudes en fasen. Door deze techniek toe te passen, wordt het mogelijk om te begrijpen uit welke frequenties het oorspronkelijke signaal bestaat en hoe sterk deze frequenties aanwezig zijn.\n",
+    "\n",
+    "Frequentie: hoe vaak een bepaald periodiek signaal zich herhaalt binnen een bepaalde periode.\n",
+    "Amplitudespectrum: de sterke van de verschillende frequenties.\n",
+    "Fase: Verschuiving van de golf in de tijd.\n",
     "\n",
     "\n",
     "![image.png](attachment:image.png)\n",
@@ -4666,11 +4672,52 @@
     "\\hat{y}(x) = \\frac{1}{K} \\sum_{k=1}^{K} f_k(x)\n",
     "$$\n",
     "\n",
+    "De formule is opgebouwd uit:\n",
+    "$$\n",
+    "\\hat{y}(x)\n",
+    "$$\n",
+    "Dit is de voorspelling van het ensemble model voor een invoer van x.\n",
+    "\n",
+    "$$\n",
+    "K\n",
+    "$$\n",
+    "\n",
+    "Dit is het totaal aantal modellen in de ensemble (totaal aantal decision trees in dit geval)\n",
+    "\n",
+    "$$\n",
+    "f_k(x)\n",
+    "$$\n",
+    "\n",
+    "Dit is de voorspelling van het 'k-de' model in de ensemble voor een invoer van x\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
     "Net zoals bij decision trees wordt er gebruik gemaakt van de MSE metric om te bepalen wat de beste splitsingen zijn:\n",
     "\n",
     "$$\n",
     "MSE = \\frac{1}{n} \\sum_{i=1}^n (Y_i - \\hat{Y})^2\n",
     "$$\n",
+    "\n",
+    "De formule is opgebouwd uit:\n",
+    "$$\n",
+    "{n}\n",
+    "$$\n",
+    "\n",
+    "Dit is het aantal waarnemingen in de dataset.\n",
+    "\n",
+    "$$\n",
+    "Y_i\n",
+    "$$\n",
+    "\n",
+    "Dit is de werkelijke waarde van de waarneming.\n",
+    "\n",
+    "$$\n",
+    "\\hat{Y}\n",
+    "$$\n",
+    "\n",
+    "Dit is de voorspelde waarde.\n",
+    "\n",
     "\n",
     "AnalytixLabs. (2023, 26 december). Random Forest Regression — How it Helps in Predictive Analytics? Medium. https://medium.com/@byanalytixlabs/random-forest-regression-how-it-helps-in-predictive-analytics-01c31897c1d4"
    ]
@@ -6057,7 +6104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6071,7 +6118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
