extra changes sarima

--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -5109,12 +5109,12 @@
    ],
    "source": [
     "# Set initial values and some bounds\n",
-    "ps = [2,4,7]\n",
-    "d = 1\n",
-    "qs = [1,4]\n",
-    "Ps = [1,3]\n",
-    "D = 1\n",
-    "Qs = [1]\n",
+    "ps = [7]\n",
+    "d = 0\n",
+    "qs = [0,1,4]\n",
+    "Ps = [7]\n",
+    "D = 0\n",
+    "Qs = [4]\n",
     "s = 24\n",
     "\n",
     "# Create a list with all possible combinations of parameters\n",
@@ -5290,21 +5290,21 @@
     "\n",
     "Niet-seizoensgebonden componenten (ARIMA-deel):\n",
     "\n",
-    "p (AR): Autoregressieve orde. Het aantal lagged observaties dat in het model wordt opgenomen.\n",
+    "p (AR): Autoregressieve orde. Het aantal lagged observaties dat in het model wordt opgenomen. We kiezen hierbij voor 7 omdat die uit de ACF/PACF plots eerder kwam.\n",
     "\n",
-    "d (I): Differentiëringsorde. Het aantal keer dat de data wordt gedifferentieerd om stationariteit te bereiken.\n",
+    "d (I): Differentiëringsorde. Het aantal keer dat de data wordt gedifferentieerd om stationariteit te bereiken. Hier kiezen we voor 0 omdat het al stationary is, dit bleek uit de ACF/PACF plots eerder.\n",
     "\n",
-    "q (MA): Moving average-orde. Het aantal lagged voorspellingsfouten in het model.\n",
+    "q (MA): Moving average-orde. Het aantal lagged voorspellingsfouten in het model. Hiervoor zoeken we naar de beste waarde\n",
     "\n",
     "Seizoensgebonden componenten:\n",
     "\n",
-    "P (SAR): Seizoensgebonden autoregressieve orde. Het aantal seizoensgebonden lag-observaties.\n",
+    "P (SAR): Seizoensgebonden autoregressieve orde. Het aantal seizoensgebonden lag-observaties. We kiezen hierbij voor 7 omdat die uit de ACF/PACF plots eerder kwam.\n",
     "\n",
-    "D (SI): Seizoensgebonden differentiëringsorde. Het aantal seizoensgebonden verschillen om de data stationair te maken.\n",
+    "D (SI): Seizoensgebonden differentiëringsorde. Het aantal seizoensgebonden verschillen om de data stationair te maken. Hier kiezen we voor 0 omdat het al stationary is, dit bleek uit de ACF/PACF plots eerder.\n",
     "\n",
-    "Q (SMA): Seizoensgebonden moving average-orde. Het aantal seizoensgebonden lagged voorspellingsfouten.\n",
+    "Q (SMA): Seizoensgebonden moving average-orde. Het aantal seizoensgebonden lagged voorspellingsfouten. Hiervoor zoeken we naar de beste waarde\n",
     "\n",
-    "s: Seizoensperiode. Het aantal tijdstappen per seizoenscyclus (bijvoorbeeld 12 voor maandelijkse data met jaarlijkse seizoensgebondenheid).\n",
+    "s: Seizoensperiode. Het aantal tijdstappen per seizoenscyclus. Wij gebruiken 24 voor onze dagelijkse seizoenscyslus\n",
     "\n",
     "Hoe werkt het verder?\n",
     "\n",
