--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -3494,6 +3494,25 @@
    "source": [
     "Keuze features:\n",
     "\n",
+    "\n",
+    "- Standaard timeseries kolommen (hour, day, week, weekend, season, weekend)\n",
+    "\n",
+    "Aan het begin zijn er een aantal standaard timeseries kolommen toegevoegd als features (zie hierboven). Deze zijn toegevoegd om ten eerst een beter inzicht in de data te krijgen, maar ook om uiteindelijk weer andere features mee te maken (zoals de sin / cos van deze kolommen)\n",
+    "\n",
+    "- Trend\n",
+    "\n",
+    "Door te kijken naar de originele grafiek zijn we erachter gekomen dat er een stijgende trend over de jaren in de data zit. Ook is er uit de DeterministicProcess functie gekomen dat order 1 het beste paste bij onze data. Door deze twee redenen is er besloten om een trend van order 1 als feature toe te voegen. Een trend is een patroon in de data dat de beweging van een reeks naar relatief hogere of lagere waarden over een lange perioden laat zien, oftewel een trend wordt waargenomen als er een stijging of daling plaatsvindt in de data. Ze zijn er maar voor een tijdje en herhalen zich niet. Dit is de formule om de trend te berekenen als het gekozen model LinearRegression is: y_t = b_0 + (b_1 * t).\n",
+    "\n",
+    "    - y_t is de variabel\n",
+    "    - b_0 is een constante waarde\n",
+    "    - b_1 is de coëfficiënt\n",
+    "    - t is de tijd\n",
+    "\n",
+    "\n",
+    "bron voor formule: Interpret all statistics and graphs for Trend Analysis - Minitab. (z.d.). (C) Minitab, LLC. All Rights Reserved. 2024. https://support.minitab.com/en-us/minitab/help-and-how-to/statistical-modeling/time-series/how-to/trend-analysis/interpret-the-results/all-statistics-and-graphs/\n",
+    "\n",
+    "bron voor uitleg: GeeksforGeeks. (2024, 20 maart). What is a trend in time series? GeeksforGeeks. https://www.geeksforgeeks.org/what-is-a-trend-in-time-series/\n",
+    "\n",
     "- Standaard timeseries kolommen (hour, day, week, weekend, season, weekend)<br>\n",
     "<br>\n",
     "Aan het begin zijn er een aantal standaard timeseries kolommen toegevoegd als features (zie hierboven). Deze zijn toegevoegd om ten eerst een beter inzicht in de data te krijgen, maar ook om uiteindelijk weer andere features mee te maken (zoals de sin / cos van deze kolommen)\n",
@@ -3557,13 +3576,6 @@
    "metadata": {},
    "source": [
     "# 4. Modelling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Cross-validation voor time series: Bij time series data kun je geen willekeurige splitsing gebruiken. Gebruik TimeSeriesSplit uit scikit-learn om met opeenvolgende perioden te valideren, of werk met 'rolling' en 'expanding' vensters."
    ]
   },
   {
@@ -5569,9 +5581,6 @@
     "for regressor in external_regressors:\n",
     "    model.add_regressor(regressor)\n",
     "\n",
-    "# Add custom seasonality\n",
-    "#model.add_seasonality(name='biweekly', period=14, fourier_order=5)\n",
-    "#model.add_seasonality(name='monthly', period=30.4, fourier_order=6)\n",
     "\n",
     "# Fit the model on training data\n",
     "model.fit(model_data)\n",
@@ -5831,7 +5840,7 @@
    ],
    "source": [
     "model1 = XGBRegressor()\n",
-    "model2 = SARIMAX(endog=train['cnt'], order=(2, 1, 1), seasonal_order=(1, 1, 1, 24))\n",
+    "model2 = SARIMAX(endog=train['cnt'], order=(7, 0, 4), seasonal_order=(7, 0, 4, 24))\n",
     "\n",
     "model1.fit(data.X_train, data.y_train.values.ravel())\n",
     "train_predict1 = model1.predict(data.X_train)\n",
@@ -6104,7 +6113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -6118,7 +6127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
