--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4  m00138.wav   reggae"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        " 'disco']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        " 'm00996.wav']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -309,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cf850b2540>]"
+       "[<matplotlib.lines.Line2D at 0x1d0058aa870>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label m00400.wav\n"
+      "Label m00677.wav\n"
      ]
     },
     {
@@ -363,7 +363,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -776,8 +776,6 @@
     "        full_path = os.path.join(base_dir, fn)\n",
     "        audio, sr = librosa.load(full_path, sr=None)\n",
     "        zcr = librosa.feature.zero_crossing_rate(audio)[0]\n",
-    "        \n",
-    "        # Compute a simple summary, e.g. mean ZCR\n",
     "        zcr_mean = np.mean(zcr)\n",
     "        zcr_data.append({\n",
     "            \"filename\": fn,\n",
@@ -789,7 +787,6 @@
     "\n",
     "print(df_zcr.head())\n",
     "\n",
-    "# Plot a boxplot of zcr_mean by genre\n",
     "plt.figure(figsize=(10, 5))\n",
     "sns.boxplot(data=df_zcr, x=\"genre\", y=\"zcr_mean\")\n",
     "plt.title(\"Average Zero Crossing Rate per File, by Genre\")\n",
@@ -811,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1196,7 @@
        "49  m00850.wav      disco  [135.99917763157896]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1676,7 @@
        "49  m00850.wav      disco  [135.99917763157896]  0.126427"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,21 +1688,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_temp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[40], line 61\u001b[0m\n\u001b[0;32m     58\u001b[0m df_tempo \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(feature_rows)\n\u001b[0;32m     60\u001b[0m \u001b[38;5;66;03m# Inspect your new columns\u001b[39;00m\n\u001b[1;32m---> 61\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf_temp\u001b[49m\u001b[38;5;241m.\u001b[39mhead())\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_temp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_rows = []\n",
     "\n",
@@ -1723,7 +1708,6 @@
     "    \n",
     "    # 1) MFCC\n",
     "    mfcc = librosa.feature.mfcc(y=audio, sr=sr, n_mfcc=13) \n",
-    "    # shape: (13, n_frames)\n",
     "    mfcc_mean = mfcc.mean(axis=1)\n",
     "    mfcc_std = mfcc.std(axis=1)\n",
     "    \n",
@@ -1759,17 +1743,15 @@
     "    for i in range(contrast.shape[0]):\n",
     "        feat_dict[f\"contrast_{i}_mean\"] = contrast_mean[i]\n",
     "        feat_dict[f\"contrast_{i}_std\"] = contrast_std[i]\n",
-    "    \n",
-    "    # Append this row to our list\n",
+    "\n",
     "    feature_rows.append(feat_dict)\n",
     "\n",
-    "# Convert to DataFrame\n",
     "df_tempo = pd.DataFrame(feature_rows)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2050,7 @@
        "[8 rows x 48 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
