--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -1392,11 +1392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pycaret.clustering import *\n"
+    "# from pycaret.clustering import ClusteringExperiment"
    ]
   }
  ],
